<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailUserActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:importantForAccessibility="no"
            android:src="@drawable/left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintEnd_toStartOf="@id/toggleTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_user"/>

        <ImageButton
            android:id="@+id/toggleTheme"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:importantForAccessibility="no"
            android:src="@drawable/dark_theme_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civUserImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="16dp"
        tools:src="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/civUserImage"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        tools:text="hai"
        />

    <TextView
        android:id="@+id/tvUsernameItalic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="20sp"
        tools:text="hai"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/llDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameItalic">
        
        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:layout_marginEnd="72dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llDesc"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_favorite_border"
        android:contentDescription="@string/favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>